--- a/WishList/Views/Shared/Error.cshtml
+++ b/WishList/Views/Shared/Error.cshtml
@@ -1,1 +1,5 @@
-﻿<p>An error has occurred. Please try again.</p>
+﻿<html>
+<body>
+    <p>An error has occurred. Please try again.</p>
+</body>
+</html>
